--- a/server-semina-bootcamp/package.json
+++ b/server-semina-bootcamp/package.json
@@ -7,13 +7,14 @@
     "dev": "nodemon ./bin/www"
   },
   "dependencies": {
-    "bson": "^4.7.2",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.0.3",
     "express": "~4.16.1",
+    "http-status-codes": "^2.2.0",
     "mongoose": "^6.8.4",
     "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20"
   }
 }
