--- a/client-semina-bootcamp/package.json
+++ b/client-semina-bootcamp/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.4",
     "bootstrap": "^5.2.3",
+    "debounce-promise": "^3.1.2",
+    "moment": "^2.29.4",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
